changed a few bootstrap styles

--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -1,12 +1,10 @@
 <div class="row">
-  <div class="col-5">
-
+  <div class="col-md-3 col-sm-5 col-lg-2">
     <div class="row">
       <div class="col-12">
         <app-display [displayValue]="displayValue"></app-display>
       </div>
     </div>
-
     <div class="row">
       <div class="col-3">
         <app-digit-button [digit]="'1'" (digitSelected)="digitSelected($event)"></app-digit-button>
@@ -54,18 +52,14 @@
         <app-digit-button [digit]="'0'" (digitSelected)="digitSelected($event)"></app-digit-button>
       </div>
       <div class="col-3">
-          <app-operator-button [operator]="'√'" (operatorSelected)="operatorSelected($event)"></app-operator-button>
-        </div>
-        <div class="col-3">
-            <app-operator-button [operator]="'='" (operatorSelected)="total()"></app-operator-button>
-          </div>
-          <div class="col-3">
-              <app-operator-button [operator]="'C'" (operatorSelected)="clear()"></app-operator-button>
-            </div>
+        <app-operator-button [operator]="'√'" (operatorSelected)="operatorSelected($event)"></app-operator-button>
+      </div>
+      <div class="col-3">
+        <app-operator-button [operator]="'='" (operatorSelected)="total()"></app-operator-button>
+      </div>
+      <div class="col-3">
+        <app-operator-button [operator]="'C'" (operatorSelected)="clear()"></app-operator-button>
+      </div>
     </div>
   </div>
 </div>
-<p>displayValue: {{displayValue}}</p>
-<p>memory: {{memory}}</p>
-<p>overwriteValue: {{overwriteValue}}</p>
-<p>savedOperator: {{savedOperator}}</p>
